fix alignment of copy

--- a/src/components/UI/Card/Card.module.scss
+++ b/src/components/UI/Card/Card.module.scss
@@ -12,7 +12,7 @@
   .CardBody {
     display: flex;
     flex-direction: column;
-    text-align: center;
+    // text-align: center;
     padding: var(--paddingdefault);
     form {
       width: 100%;
